--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             alert("Please provide a valid email address.");
             return false;
         } else if (feedback.value === "") {
-            alert("Write something interesting about my code.");
+            alert("PLEASE ENTER YOUR FEEDBACK");
             return false;
         } else {
             var feedbackData = {
